<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/color_picked_preview"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_weight="1"
        android:contentDescription="preview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="R" />

            <SeekBar
                android:id="@+id/color_picker_seek_bar_r"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:max="255"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="G" />

            <SeekBar
                android:id="@+id/color_picker_seek_bar_g"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:max="255"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="B" />

            <SeekBar
                android:id="@+id/color_picker_seek_bar_b"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:max="255"
                android:progress="0" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
