<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/color_select_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1" />
</LinearLayout>
